# qemu360

./: README.rst  bootorder.txt  trace-events
.github/ISSUE_TEMPLATE/: xbox360-bug.md
.github/workflows/: Dockerfile.xbox360  build-qemu-xbox360.yml  docker-build.yml
configs/devices/ppc-softmmu/: default.mak
hw/ppc/: Kconfig  meson.build
hw/xbox360/: meson.build  xbox360.c  xbox360_boot.c  xbox360_dma.c  xbox360_gic.c  xbox360_gpu.c  xbox360_integration.c  xbox360_kernel.c  xbox360_mmu.c  xbox360_nand.c  xbox360_nand.h  xbox360_network.c  xbox360_pcie.c  xbox360_sata.c  xbox360_smc.c  xbox360_smc.h  xbox360_storage.c  xbox360_syscall.c  xbox360_timer.c  xbox360_usb.c  xbox360_xma.c
hw/xbox360/crypto/: meson.build  xe_crypto.c  xe_crypto.h  xe_keys.c
include/hw/xbox360/: wth.txt  xbox360.h  xbox360_dma.h  xbox360_gic.h  xbox360_gpu.h  xbox360_kernel.h  xbox360_mmu.h  xbox360_network.h  xbox360_pcie.h  xbox360_sata.h  xbox360_storage.h  xbox360_timer.h  xbox360_usb.h  xbox360_xma.h
